Fix timer bar covering form input

--- a/public/style.css
+++ b/public/style.css
@@ -213,6 +213,7 @@ html {
     top:0;
     position: absolute;
     width: 100%;
+    pointer-events: none;
 }
 
 .timer_cursor {
